while_ldb_parser/parser.output
Terminals unused in grammar

    TM_SL
    TM_COMMA


State 31 conflicts: 14 reduce/reduce
State 33 conflicts: 14 reduce/reduce
State 34 conflicts: 14 reduce/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 73 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_VAR TM_IDENT
    3       | NT_EXPR TM_ASGNOP NT_EXPR
    4       | NT_CMD TM_SEMICOL NT_CMD
    5       | TM_IF NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    6       | TM_WHILE NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    7       | TM_WI TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
    8       | TM_WC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
    9       | TM_WS TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

   10 NT_EXPR_2: TM_NAT
   11          | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   12          | TM_IDENT
   13          | TM_RI TM_LEFT_PAREN TM_RIGHT_PAREN
   14          | TM_RC TM_LEFT_PAREN TM_RIGHT_PAREN
   15          | TM_MALLOC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   16          | TM_NOT NT_EXPR_2
   17          | TM_MINUS NT_EXPR_2
   18          | TM_MUL NT_EXPR_2
   19          | TM_LEN TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   20          | TM_RS TM_LEFT_PAREN TM_RIGHT_PAREN
   21          | NT_EXPR TM_LSB NT_EXPR TM_RSB

   22 NT_EXPR: NT_EXPR_2
   23        | NT_EXPR TM_MUL NT_EXPR
   24        | NT_EXPR TM_PLUS NT_EXPR
   25        | NT_EXPR TM_MINUS NT_EXPR
   26        | NT_EXPR TM_DIV NT_EXPR
   27        | NT_EXPR TM_MOD NT_EXPR
   28        | NT_EXPR TM_LT NT_EXPR
   29        | NT_EXPR TM_GT NT_EXPR
   30        | NT_EXPR TM_LE NT_EXPR
   31        | NT_EXPR TM_GE NT_EXPR
   32        | NT_EXPR TM_EQ NT_EXPR
   33        | NT_EXPR TM_NE NT_EXPR
   34        | NT_EXPR TM_AND NT_EXPR
   35        | NT_EXPR TM_OR NT_EXPR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 10
    TM_IDENT <i> (259) 2 12
    TM_LEFT_BRACE <none> (260) 5 6
    TM_RIGHT_BRACE <none> (261) 5 6
    TM_LEFT_PAREN <none> (262) 7 8 9 11 13 14 15 19 20
    TM_RIGHT_PAREN <none> (263) 7 8 9 11 13 14 15 19 20
    TM_SEMICOL <none> (264) 4
    TM_MALLOC <none> (265) 15
    TM_RI <none> (266) 13
    TM_RC <none> (267) 14
    TM_WI <none> (268) 7
    TM_WC <none> (269) 8
    TM_VAR <none> (270) 2
    TM_IF <none> (271) 5
    TM_THEN <none> (272) 5
    TM_ELSE <none> (273) 5
    TM_WHILE <none> (274) 6
    TM_DO <none> (275) 6
    TM_ASGNOP <none> (276) 3
    TM_OR <none> (277) 35
    TM_AND <none> (278) 34
    TM_NOT <none> (279) 16
    TM_LT <none> (280) 28
    TM_LE <none> (281) 30
    TM_GT <none> (282) 29
    TM_GE <none> (283) 31
    TM_EQ <none> (284) 32
    TM_NE <none> (285) 33
    TM_PLUS <none> (286) 24
    TM_MINUS <none> (287) 17 25
    TM_MUL <none> (288) 18 23
    TM_DIV <none> (289) 26
    TM_MOD <none> (290) 27
    TM_LEN <none> (291) 19
    TM_RS <none> (292) 20
    TM_WS <none> (293) 9
    TM_SL <none> (294)
    TM_LSB <none> (295) 21
    TM_RSB <none> (296) 21
    TM_COMMA <none> (297)


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    NT_WHOLE <c> (44)
        on left: 1
        on right: 0
    NT_CMD <c> (45)
        on left: 2 3 4 5 6 7 8 9
        on right: 1 4 5 6
    NT_EXPR_2 <e> (46)
        on left: 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 16 17 18 22
    NT_EXPR <e> (47)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 3 5 6 7 8 9 11 15 19 21 23 24 25 26 27 28 29 30 31 32 33 34 35


State 0

    0 $accept: • NT_WHOLE $end

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_WI          shift, and go to state 7
    TM_WC          shift, and go to state 8
    TM_VAR         shift, and go to state 9
    TM_IF          shift, and go to state 10
    TM_WHILE       shift, and go to state 11
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16
    TM_WS          shift, and go to state 17

    NT_WHOLE   go to state 18
    NT_CMD     go to state 19
    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 21


State 1

   10 NT_EXPR_2: TM_NAT •

    $default  reduce using rule 10 (NT_EXPR_2)


State 2

   12 NT_EXPR_2: TM_IDENT •

    $default  reduce using rule 12 (NT_EXPR_2)


State 3

   11 NT_EXPR_2: TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 22


State 4

   15 NT_EXPR_2: TM_MALLOC • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 23


State 5

   13 NT_EXPR_2: TM_RI • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 24


State 6

   14 NT_EXPR_2: TM_RC • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 25


State 7

    7 NT_CMD: TM_WI • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 26


State 8

    8 NT_CMD: TM_WC • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 27


State 9

    2 NT_CMD: TM_VAR • TM_IDENT

    TM_IDENT  shift, and go to state 28


State 10

    5 NT_CMD: TM_IF • NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 29


State 11

    6 NT_CMD: TM_WHILE • NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 30


State 12

   16 NT_EXPR_2: TM_NOT • NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16

    NT_EXPR_2  go to state 31
    NT_EXPR    go to state 32


State 13

   17 NT_EXPR_2: TM_MINUS • NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16

    NT_EXPR_2  go to state 33
    NT_EXPR    go to state 32


State 14

   18 NT_EXPR_2: TM_MUL • NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16

    NT_EXPR_2  go to state 34
    NT_EXPR    go to state 32


State 15

   19 NT_EXPR_2: TM_LEN • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 35


State 16

   20 NT_EXPR_2: TM_RS • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 36


State 17

    9 NT_CMD: TM_WS • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 37


State 18

    0 $accept: NT_WHOLE • $end

    $end  shift, and go to state 38


State 19

    1 NT_WHOLE: NT_CMD •
    4 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 39

    $default  reduce using rule 1 (NT_WHOLE)


State 20

   22 NT_EXPR: NT_EXPR_2 •

    $default  reduce using rule 22 (NT_EXPR)


State 21

    3 NT_CMD: NT_EXPR • TM_ASGNOP NT_EXPR
   21 NT_EXPR_2: NT_EXPR • TM_LSB NT_EXPR TM_RSB
   23 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   24        | NT_EXPR • TM_PLUS NT_EXPR
   25        | NT_EXPR • TM_MINUS NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_LT NT_EXPR
   29        | NT_EXPR • TM_GT NT_EXPR
   30        | NT_EXPR • TM_LE NT_EXPR
   31        | NT_EXPR • TM_GE NT_EXPR
   32        | NT_EXPR • TM_EQ NT_EXPR
   33        | NT_EXPR • TM_NE NT_EXPR
   34        | NT_EXPR • TM_AND NT_EXPR
   35        | NT_EXPR • TM_OR NT_EXPR

    TM_ASGNOP  shift, and go to state 40
    TM_OR      shift, and go to state 41
    TM_AND     shift, and go to state 42
    TM_LT      shift, and go to state 43
    TM_LE      shift, and go to state 44
    TM_GT      shift, and go to state 45
    TM_GE      shift, and go to state 46
    TM_EQ      shift, and go to state 47
    TM_NE      shift, and go to state 48
    TM_PLUS    shift, and go to state 49
    TM_MINUS   shift, and go to state 50
    TM_MUL     shift, and go to state 51
    TM_DIV     shift, and go to state 52
    TM_MOD     shift, and go to state 53
    TM_LSB     shift, and go to state 54


State 22

   11 NT_EXPR_2: TM_LEFT_PAREN NT_EXPR • TM_RIGHT_PAREN
   21          | NT_EXPR • TM_LSB NT_EXPR TM_RSB
   23 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   24        | NT_EXPR • TM_PLUS NT_EXPR
   25        | NT_EXPR • TM_MINUS NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_LT NT_EXPR
   29        | NT_EXPR • TM_GT NT_EXPR
   30        | NT_EXPR • TM_LE NT_EXPR
   31        | NT_EXPR • TM_GE NT_EXPR
   32        | NT_EXPR • TM_EQ NT_EXPR
   33        | NT_EXPR • TM_NE NT_EXPR
   34        | NT_EXPR • TM_AND NT_EXPR
   35        | NT_EXPR • TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 55
    TM_OR           shift, and go to state 41
    TM_AND          shift, and go to state 42
    TM_LT           shift, and go to state 43
    TM_LE           shift, and go to state 44
    TM_GT           shift, and go to state 45
    TM_GE           shift, and go to state 46
    TM_EQ           shift, and go to state 47
    TM_NE           shift, and go to state 48
    TM_PLUS         shift, and go to state 49
    TM_MINUS        shift, and go to state 50
    TM_MUL          shift, and go to state 51
    TM_DIV          shift, and go to state 52
    TM_MOD          shift, and go to state 53
    TM_LSB          shift, and go to state 54


State 23

   15 NT_EXPR_2: TM_MALLOC TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 56


State 24

   13 NT_EXPR_2: TM_RI TM_LEFT_PAREN • TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 57


State 25

   14 NT_EXPR_2: TM_RC TM_LEFT_PAREN • TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 58


State 26

    7 NT_CMD: TM_WI TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 59


State 27

    8 NT_CMD: TM_WC TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_LEFT_PAREN  shift, and go to state 3
    TM_MALLOC      shift, and go to state 4
    TM_RI          shift, and go to state 5
    TM_RC          shift, and go to state 6
    TM_NOT         shift, and go to state 12
    TM_MINUS       shift, and go to state 13
    TM_MUL         shift, and go to state 14
    TM_LEN         shift, and go to state 15
    TM_RS          shift, and go to state 16

    NT_EXPR_2  go to state 20
    NT_EXPR    go to state 60


State 28

    2 NT_CMD: TM_VAR TM_IDENT •

    $default  reduce using rule 2 (NT_CMD)


State 29

    5 NT_CMD: TM_IF NT_EXPR • TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   21 NT_EXPR_2: NT_EXPR • TM_LSB NT_EXPR TM_RSB
   23 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   24        | NT_EXPR • TM_PLUS NT_EXPR
   25        | NT_EXPR • TM_MINUS NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_LT NT_EXPR
   29        | NT_EXPR • TM_GT NT_EXPR
   30        | NT_EXPR • TM_LE NT_EXPR
   31        | NT_EXPR • TM_GE NT_EXPR
   32        | NT_EXPR • TM_EQ NT_EXPR
   33        | NT_EXPR • TM_NE NT_EXPR
   34        | NT_EXPR • TM_AND NT_EXPR
   35        | NT_EXPR • TM_OR NT_EXPR

    TM_THEN   shift, and go to state 61
    TM_OR     shift, and go to state 41
    TM_AND    shift, and go to state 42
    TM_LT     shift, and go to state 43
    TM_LE     shift, and go to state 44
    TM_GT     shift, and go to state 45
    TM_GE     shift, and go to state 46
    TM_EQ     shift, and go to state 47
    TM_NE     shift, and go to state 48
    TM_PLUS   shift, and go to state 49
    TM_MINUS  shift, and go to state 50
    TM_MUL    shift, and go to state 51
    TM_DIV    shift, and go to state 52
    TM_MOD    shift, and go to state 53
    TM_LSB    shift, and go to state 54


State 30

    6 NT_CMD: TM_WHILE NT_EXPR • TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   21 NT_EXPR_2: NT_EXPR • TM_LSB NT_EXPR TM_RSB
   23 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   24        | NT_EXPR • TM_PLUS NT_EXPR
   25        | NT_EXPR • TM_MINUS NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_LT NT_EXPR
   29        | NT_EXPR • TM_GT NT_EXPR
   30        | NT_EXPR • TM_LE NT_EXPR
   31        | NT_EXPR • TM_GE NT_EXPR
   32        | NT_EXPR • TM_EQ NT_EXPR
   33        | NT_EXPR • TM_NE NT_EXPR
   34        | NT_EXPR • TM_AND NT_EXPR
   35        | NT_EXPR • TM_OR NT_EXPR

    TM_DO     shift, and go to state 62
    TM_OR     shift, and go to state 41
    TM_AND    shift, and go to state 42
    TM_LT     shift, and go to state 43
    TM_LE     shift, and go to state 44
    TM_GT     shift, and go to state 45
    TM_GE     shift, and go to state 46
    TM_EQ     shift, and go to state 47
    TM_NE     shift, and go to state 48
    TM_PLUS   shift, and go to state 49
    TM_MINUS  shift, and go to state 50
    TM_MUL    shift, and go to state 51
    TM_DIV    shift, and go to state 52
    TM_MOD    shift, and go to state 53
    TM_LSB    shift, and go to state 54


State 31

   16 NT_EXPR_2: TM_NOT NT_EXPR_2 •
   22 NT_EXPR: NT_EXPR_2 •

    TM_OR     reduce using rule 16 (NT_EXPR_2)
    TM_OR     [reduce using rule 22 (NT_EXPR)]
    TM_AND    reduce using rule 16 (NT_EXPR_2)
    TM_AND    [reduce using rule 22 (NT_EXPR)]
    TM_LT     reduce using rule 16 (NT_EXPR_2)
    TM_LT     [reduce using rule 22 (NT_EXPR)]
    TM_LE     reduce using rule 16 (NT_EXPR_2)
    TM_LE     [reduce using rule 22 (NT_EXPR)]
    TM_GT     reduce using rule 16 (NT_EXPR_2)
    TM_GT     [reduce using rule 22 (NT_EXPR)]
    TM_GE     reduce using rule 16 (NT_EXPR_2)
    TM_GE     [reduce using rule 22 (NT_EXPR)]
    TM_EQ     reduce using rule 16 (NT_EXPR_2)
    TM_EQ     [reduce using rule 22 (NT_EXPR)]
    TM_NE     reduce using rule 16 (NT_EXPR_2)
    TM_NE     [reduce using rule 22 (NT_EXPR)]
    TM_PLUS   reduce using rule 16 (NT_EXPR_2)
    TM_PLUS   [reduce using rule 22 (NT_EXPR)]
    TM_MINUS  reduce using rule 16 (NT_EXPR_2)
    TM_MINUS  [reduce using rule 22 (NT_EXPR)]
    TM_MUL    reduce using rule 16 (NT_EXPR_2)
    TM_MUL    [reduce using rule 22 (NT_EXPR)]
    TM_DIV    reduce using rule 16 (NT_EXPR_2)
    TM_DIV    [reduce using rule 22 (NT_EXPR)]
    TM_MOD    reduce using rule 16 (NT_EXPR_2)
    TM_MOD    [reduce using rule 22 (NT_EXPR)]
    TM_LSB    reduce using rule 16 (NT_EXPR_2)
    TM_LSB    [reduce using rule 22 (NT_EXPR)]
    $default  reduce using rule 16 (NT_EXPR_2)


State 32

   21 NT_EXPR_2: NT_EXPR • TM_LSB NT_EXPR TM_RSB
   23 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   24        | NT_EXPR • TM_PLUS NT_EXPR
   25        | NT_EXPR • TM_MINUS NT_EXPR
   26        | NT_EXPR • TM_DIV NT_EXPR
   27        | NT_EXPR • TM_MOD NT_EXPR
   28        | NT_EXPR • TM_LT NT_EXPR
   29        | NT_EXPR • TM_GT NT_EXPR
   30        | NT_EXPR • TM_LE NT_EXPR
   31        | NT_EXPR • TM_GE NT_EXPR
   32        | NT_EXPR • TM_EQ NT_EXPR
   33        | NT_EXPR • TM_NE NT_EXPR
   34        | NT_EXPR • TM_AND NT_EXPR
   35        | NT_EXPR • TM_OR NT_EXPR

    TM_OR     shift, and go to state 41
    TM_AND    shift, and go to state 42
    TM_LT     shift, and go to state 43
    TM_LE     shift, and go to state 44
    TM_GT     shift, and go to state 45
    TM_GE     shift, and go to state 46
    TM_EQ     shift, and go to state 47
    TM_NE     shift, and go to state 48
    TM_PLUS   shift, and go to state 49
    TM_MINUS  shift, and go to state 50
    TM_MUL    shift, and go to state 51
    TM_DIV    shift, and go to state 52
    TM_MOD    shift, and go to state 53
    TM_LSB    shift, and go to state 54


State 33

   17 NT_EXPR_2: TM_MINUS NT_EXPR_2 •
   22 NT_EXPR: NT_EXPR_2 •
